feat: refactoring search method from keys to names (#82)
* feat: refactoring keys to names

* test: update test data
